JumpScript/tests/baselines/reference/parserErrorRecovery_ObjectLiteral2.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ObjectLiterals/parserErrorRecovery_ObjectLiteral2.jump(2,1): error TS1005: ':' expected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ObjectLiterals/parserErrorRecovery_ObjectLiteral2.jump(2,7): error TS1005: ':' expected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ObjectLiterals/parserErrorRecovery_ObjectLiteral2.jump(2,8): error TS1005: '}' expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ObjectLiterals/parserErrorRecovery_ObjectLiteral2.jump (3 errors) ====
    var v = { a
    return;
    ~~~~~~
!!! error TS1005: ':' expected.
          ~
!!! error TS1005: ':' expected.
           
!!! error TS1005: '}' expected.